--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             margin: 0;
         }
         </style>
-        <title></title>
+        <title>Petit tour de l'Hérault...</title>
     </head>
     <body>
         <div id="map">
